@@ -312,6 +312,30 @@ TOML metadata should be wrapped by a "+++" separator and in that case, the usual
    date = "2012-09-15 19:52:05 UTC"
    +++
 
+Markdown Metadata only works in markdown files, and requires the ``markdown.extensions.meta`` extension 
+(see `MARKDOWN_EXTENSIONS <#markdown>`__). The exact format is described in 
+the `markdown metadata extension docs <https://pythonhosted.org/Markdown/extensions/meta_data.html>`__
+
+.. code::
+
+   title: How to make money
+   slug: how-to-make-money
+   date: 2012-09-15 19:52:05 UTC
+
+Nikola can extract metadata from reStructured Text docinfo fields and the document itself, too:
+
+.. code::
+
+    How to make money
+    =================
+
+    :slug: how-to-make-money
+    :date: 2012-09-15 19:52:05 UTC
+
+To do this, you need  ``USE_REST_DOCINFO_METADATA = True`` in your ``conf.py``, 
+and Nikola will hide the docinfo fields in the output if you set 
+``HIDE_REST_DOCINFO = True``.
+
 Basic
 `````
 
